add jlink image